[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visual_blocks"
version = "0.0.1"
authors = [
  { name="Jing Jin", email="jingjin@google.com" },
]
description = "Visual Blocks for Google Colaboratory"
readme = "README.pypi.md"
requires-python = ">=3.7"
classifiers = [
    "Environment :: Other Environment",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/google/visual-blocks"
"Bug Tracker" = "https://github.com/google/visual-blocks/issues"
